--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './utils/_reset.scss';
 
 @import './components/page-header';
+@import './components/mobile-menu';
 @import './components/page-hero';
 @import './components/features';
 @import './components/about';
