--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,10 +1,17 @@
 .filters {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   margin-bottom: 50px;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+  }
 }
 .filters__item {
   margin-right: 8px;
+  margin-bottom: 15px;
 
   &:last-child {
     margin-right: 0pt;
@@ -41,20 +48,45 @@
 .projects {
   display: flex;
   flex-wrap: wrap;
+  //justify-content: center;
+  margin: -15px;
 }
-.project__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
 
-  &:nth-child(3n + 3) {
-    margin-right: 0;
-  }
-  &:nth-last-child(-n + 3) {
+.project__item {
+  display: flex;
+  justify-content: center;
+  margin: 15px;
+  &:last-child {
     margin-bottom: 0;
+  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    .project__item {
+      &:nth-child(2n + 2) {
+        margin-right: 0;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 6 * 15px) / 3);
+    //margin-right: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(3n + 3) {
+      margin-right: 0;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 }
 .project__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   border: none;
   text-decoration: none;
   &:hover,
@@ -70,6 +102,8 @@
 }
 
 .project__wrap {
+  flex-grow: 1;
+  max-width: 354px;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: transparent;
