--- a/css/main.css
+++ b/css/main.css
@@ -164,8 +164,15 @@ a {
 
 .site-nav,
 .site-nav__list {
-  display: flex;
-  align-items: center;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav,
+  .site-nav__list {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .logo {
@@ -231,11 +238,28 @@ a {
 }
 
 .contacts {
-  display: flex;
+  display: none;
 }
 
-.contacts .contacts__item:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: block;
+  }
+  .contacts .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: flex;
+  }
+  .contacts .contacts__item:not(:first-child) {
+    margin-left: 50px;
+  }
+  .contacts .contacts__item:not(:last-child) {
+    margin-bottom: 0;
+  }
 }
 
 .contacts__icon {
@@ -249,8 +273,6 @@ a {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: var(--primary-text-color);
   fill: var(--primary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -259,6 +281,130 @@ a {
 .contacts__link:hover, .contacts__link:focus {
   color: var(--accent-text-color);
   fill: var(--accent-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  padding-left: 40px;
+  padding-bottom: 48px;
+  background-color: #ffffff;
+  z-index: 200;
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+  transform: translateX(0);
+}
+
+.menu {
+  display: flex;
+  width: 100%;
+  height: 60px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+
+.menu-toggle {
+  border: none;
+  background-color: transparent;
+}
+
+.menu-toggle .menu__icon:hover, .menu-toggle .menu__icon:focus {
+  fill: var(--accent-color);
+  outline: none;
+}
+
+.menu__list {
+  margin-top: 48px;
+}
+
+.menu__item {
+  margin-bottom: 32px;
+}
+
+.menu__item:last-child {
+  margin-bottom: 0;
+}
+
+.menu__link {
+  display: block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu__link:hover, .menu__link:focus {
+  color: var(--accent-text-color);
+}
+
+.menu__link--current {
+  color: var(--accent-text-color);
+}
+
+.close__icon {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.close__icon:focus, .close__icon:hover {
+  fill: var(--accent-color);
+  outline: none;
+}
+
+.menu__contacts__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.18;
+  color: var(--primary-text-color);
+}
+
+.menu__contacts__link--accent {
+  display: block;
+  margin-bottom: 32px;
+  font-size: 34px;
+  color: var(--accent-text-color);
+}
+
+.menu__social {
+  display: flex;
+}
+
+.menu_social-item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid var(--accent-color);
+}
+
+.menu__social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-text-color);
 }
 
 .hero {
@@ -1004,12 +1150,25 @@ a {
 
 .filters {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   margin-bottom: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .filters {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filters {
+    flex-wrap: nowrap;
+  }
 }
 
 .filters__item {
   margin-right: 8px;
+  margin-bottom: 15px;
 }
 
 .filters__item:last-child {
@@ -1042,23 +1201,48 @@ a {
 .projects {
   display: flex;
   flex-wrap: wrap;
+  margin: -15px;
 }
 
 .project__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  margin: 15px;
 }
 
-.project__item:nth-child(3n + 3) {
-  margin-right: 0;
-}
-
-.project__item:nth-last-child(-n + 3) {
+.project__item:last-child {
   margin-bottom: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .project__item {
+    flex-basis: calc((100% - 4 * 15px) / 2);
+  }
+  .project__item .project__item:nth-child(2n + 2) {
+    margin-right: 0;
+  }
+  .project__item .project__item:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item {
+    flex-basis: calc((100% - 6 * 15px) / 3);
+    margin-bottom: 30px;
+  }
+  .project__item:nth-child(3n + 3) {
+    margin-right: 0;
+  }
+  .project__item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
 .project__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   border: none;
   text-decoration: none;
 }
@@ -1073,6 +1257,8 @@ a {
 }
 
 .project__wrap {
+  flex-grow: 1;
+  max-width: 354px;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: transparent;
