--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -7,6 +7,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
   }
   @media screen and (min-width: 1200px) {
     text-align: left;
@@ -17,7 +18,7 @@
 .footer__list {
   margin-bottom: 60px;
   @media screen and (min-width: 768px) {
-    width: 50%;
+    margin-bottom: 0;
   }
   @media screen and (min-width: 1200px) {
     width: calc((100%-70px) / 3);
@@ -79,7 +80,7 @@
   margin-bottom: 60px;
 
   @media screen and (min-width: 768px) {
-    width: 50%;
+    margin-bottom: 0;
   }
   @media screen and (min-width: 1200px) {
     width: calc((100%-93px) / 3);
@@ -117,10 +118,13 @@
 }
 .footer__form {
   @media screen and (min-width: 768px) {
-    width: 100%;
+    margin-top: 60px;
   }
+  //@media screen and (min-width: 768px) {
+  // width: 100%;
+  //}
   @media screen and (min-width: 1200px) {
-    width: 50%;
+    margin-top: 0;
   }
 }
 .footer-form__wrap {
