--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,7 +1,7 @@
 .filters {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
   @media screen and (min-width: 768px) {
     justify-content: center;
   }
@@ -46,43 +46,23 @@
 }
 
 .projects {
-  display: flex;
-  flex-wrap: wrap;
-  //justify-content: center;
-  margin: -15px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 .project__item {
-  display: flex;
-  justify-content: center;
-  margin: 15px;
-  &:last-child {
-    margin-bottom: 0;
-  }
+  margin-bottom: 30px;
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 4 * 15px) / 2);
-    .project__item {
-      &:nth-child(2n + 2) {
-        margin-right: 0;
-      }
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
+    flex-basis: calc((100% - 30px) / 2);
   }
   @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% - 6 * 15px) / 3);
-    //margin-right: 30px;
-    margin-bottom: 30px;
-
-    &:nth-child(3n + 3) {
-      margin-right: 0;
-    }
-    &:nth-last-child(-n + 3) {
-      margin-bottom: 0;
-    }
+    flex-basis: calc((100% - 60px) / 3);
   }
 }
+
 .project__link {
   display: flex;
   flex-direction: column;
@@ -103,7 +83,7 @@
 
 .project__wrap {
   flex-grow: 1;
-  max-width: 354px;
+
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: transparent;
