--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,7 +5,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin: -15px;
+    justify-content: space-between;
   }
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
@@ -14,24 +14,34 @@
 }
 .team__item {
   justify-content: center;
-  margin: 0 auto 30px;
+  margin-bottom: 30px;
   overflow: hidden;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
   @media screen and (min-width: 768px) {
-    width: calc((100% - 4 * 15px) / 2);
+    width: calc((100% - 30px) / 2);
     min-width: 270px;
+    //margin-right: 30px;
+    //&:nth-child(2n + 2) {
+    //margin-right: 0;
+    //}
+    //&:nth-last-child(-n + 2) {
+    //margin-bottom: 0;
+    //}
   }
   @media screen and (min-width: 1200px) {
-    width: calc((100% - 4 * 15px) / 4);
+    width: calc((100% - 60px) / 4);
     min-width: 270px;
-    margin: 0 30px 0 0;
-
-    &:last-child {
-      margin: 0;
-    }
+    margin-bottom: 0;
+    //margin-right: 30;
+    //&:nth-child(2n + 2) {
+    // margin-right: 30px;
+    //}
+    // &:last-child {
+    //margin-right: 0;
+    //}
   }
 }
 
