--- a/css/main.css
+++ b/css/main.css
@@ -454,6 +454,7 @@ a {
 
 @media screen and (min-width: 1200px) {
   .hero {
+    padding: 200px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-1x.jpg);
     background-size: cover;
     background-position: center;
