--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -13,8 +13,12 @@
   }
 }
 .team__item {
-  justify-content: center;
   margin-bottom: 30px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+  justify-content: center;
+
   overflow: hidden;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -23,6 +27,9 @@
   @media screen and (min-width: 768px) {
     width: calc((100% - 30px) / 2);
     min-width: 270px;
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
   }
   @media screen and (min-width: 1200px) {
     width: calc((100% - 60px) / 4);
