--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,20 +1,27 @@
 .filters {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 50px;
+  margin-bottom: 52px;
   @media screen and (min-width: 768px) {
     justify-content: center;
+    margin-bottom: 30px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
+    margin-bottom: 50px;
   }
 }
 .filters__item {
   margin-right: 8px;
   margin-bottom: 15px;
-
+  &:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
   &:last-child {
-    margin-right: 0pt;
+    margin-right: 0;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
   }
 }
 
@@ -55,11 +62,17 @@
 
 .project__item {
   margin-bottom: 30px;
+  &:last-child {
+    margin-bottom: 0;
+  }
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 30px) / 2);
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 60px) / 3);
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
 }
 
