--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -15,7 +15,6 @@
   }
 }
 .logo {
-  margin-right: 107px;
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -26,6 +25,12 @@
   &:hover,
   &:focus {
     color: var(--accent-text-color);
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
   }
 }
 .logo--blue {
