--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -28,6 +28,9 @@
   }
 }
 .menu-toggle {
+  top: 10px;
+  right: 10px;
+  position: absolute;
   border: none;
   background-color: transparent;
   .menu__icon {
@@ -60,15 +63,13 @@
 .menu__link--current {
   color: var(--accent-text-color);
 }
-.close__icon {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  &:focus,
-  &:hover {
-    fill: var(--accent-color);
-    outline: none;
-  }
+.close__icon:focus,
+.close__icon:hover {
+  fill: var(--accent-color);
+  outline: none;
+}
+.menu__contacts {
+  margin-bottom: 64px;
 }
 .menu__contacts__link {
   font-weight: 500;
