--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -11,12 +11,18 @@
 }
 .features__item {
   margin-bottom: 30px;
-
+  &:last-child {
+    margin-bottom: 0;
+  }
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 30px) / 2);
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 90px) / 4);
+    margin-bottom: 0;
   }
 }
 .features__title {
