--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,6 @@ a {
 }
 
 .logo {
-  margin-right: 107px;
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -200,6 +199,18 @@ a {
 
 .logo:hover, .logo:focus {
   color: var(--accent-text-color);
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 93px;
+  }
 }
 
 .logo--blue {
@@ -337,6 +348,9 @@ a {
 }
 
 .menu-toggle {
+  top: 10px;
+  right: 10px;
+  position: absolute;
   border: none;
   background-color: transparent;
 }
@@ -372,15 +386,14 @@ a {
   color: var(--accent-text-color);
 }
 
-.close__icon {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}
-
-.close__icon:focus, .close__icon:hover {
+.close__icon:focus,
+.close__icon:hover {
   fill: var(--accent-color);
   outline: none;
+}
+
+.menu__contacts {
+  margin-bottom: 64px;
 }
 
 .menu__contacts__link {
@@ -505,15 +518,23 @@ a {
   margin-bottom: 30px;
 }
 
+.features__item:last-child {
+  margin-bottom: 0;
+}
+
 @media screen and (min-width: 768px) {
   .features__item {
     flex-basis: calc((100% - 30px) / 2);
+  }
+  .features__item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features__item {
     flex-basis: calc((100% - 90px) / 4);
+    margin-bottom: 0;
   }
 }
 
@@ -559,7 +580,7 @@ a {
 
 @media screen and (min-width: 1200px) {
   .section--no-padding-top {
-    padding-bottom: 60px;
+    padding-bottom: 94px;
   }
 }
 
@@ -630,17 +651,24 @@ a {
 }
 
 .team__item {
-  justify-content: center;
   margin-bottom: 30px;
+  justify-content: center;
   overflow: hidden;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+.team__item:last-child {
+  margin-bottom: 0;
 }
 
 @media screen and (min-width: 768px) {
   .team__item {
     width: calc((100% - 30px) / 2);
     min-width: 270px;
+  }
+  .team__item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
   }
 }
 
@@ -1166,18 +1194,20 @@ a {
 .filters {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 50px;
+  margin-bottom: 52px;
 }
 
 @media screen and (min-width: 768px) {
   .filters {
     justify-content: center;
+    margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .filters {
     flex-wrap: nowrap;
+    margin-bottom: 50px;
   }
 }
 
@@ -1186,8 +1216,18 @@ a {
   margin-bottom: 15px;
 }
 
+.filters__item:nth-last-child(-n + 2) {
+  margin-bottom: 0;
+}
+
 .filters__item:last-child {
-  margin-right: 0pt;
+  margin-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .filters__item {
+    margin-bottom: 0;
+  }
 }
 
 .filters__button {
@@ -1225,6 +1265,10 @@ a {
   margin-bottom: 30px;
 }
 
+.project__item:last-child {
+  margin-bottom: 0;
+}
+
 @media screen and (min-width: 768px) {
   .project__item {
     flex-basis: calc((100% - 30px) / 2);
@@ -1234,6 +1278,9 @@ a {
 @media screen and (min-width: 1200px) {
   .project__item {
     flex-basis: calc((100% - 60px) / 3);
+  }
+  .project__item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
   }
 }
 
